--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -1,20 +1,40 @@
 <main
   class="flex h-fit min-h-screen flex-col items-center justify-center gap-12 p-6"
 >
-  <h1 class="text-center text-3xl font-bold">Login to an Existing Account</h1>
+  <h1 class="text-center text-3xl font-bold">Create an Account</h1>
 
   <form
     action=""
     class="flex w-full flex-col gap-8 rounded-md md:w-2/3 lg:w-1/2 xl:w-1/3"
   >
     <div class="flex w-full flex-col">
-      <label for="profile" class="text-sm font-semibold"
-        >Username or Email Address</label
-      >
+      <label for="name" class="text-sm font-semibold">Name</label>
       <input
         type="text"
-        id="profile"
-        name="profile"
+        id="name"
+        name="name"
+        required
+        class="h-12 w-full rounded-sm border-2 border-zinc-500 px-4 py-2 outline-none duration-200 focus:border-black"
+      />
+    </div>
+
+    <div class="flex w-full flex-col">
+      <label for="username" class="text-sm font-semibold">Username</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        required
+        class="h-12 w-full rounded-sm border-2 border-zinc-500 px-4 py-2 outline-none duration-200 focus:border-black"
+      />
+    </div>
+
+    <div class="flex w-full flex-col">
+      <label for="email" class="text-sm font-semibold">Email</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
         required
         class="h-12 w-full rounded-sm border-2 border-zinc-500 px-4 py-2 outline-none duration-200 focus:border-black"
       />
@@ -31,25 +51,32 @@
       />
     </div>
 
+    <div class="flex w-full flex-col">
+      <label for="confirm" class="text-sm font-semibold"
+        >Confirm Password</label
+      >
+      <input
+        type="password"
+        id="confirm"
+        name="confirm"
+        required
+        class="h-12 w-full rounded-sm border-2 border-zinc-500 px-4 py-2 outline-none duration-200 focus:border-black"
+      />
+    </div>
+
     <button
       type="submit"
-      class="flex h-12 items-center justify-center gap-4 border-2 border-black bg-black fill-white font-bold uppercase tracking-tight text-white duration-200 hover:gap-8 hover:bg-white hover:fill-black hover:text-black"
+      class="flex h-12 items-center justify-center border-2 border-black bg-black font-bold uppercase tracking-tight text-white duration-200 hover:bg-white hover:text-black"
     >
-      Login
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="size-4 -translate-y-px"
-        viewBox="0 -960 960 960"
-      >
-        <path
-          d="M506.26-480.67 312.93-674l62.4-62.41 255.74 255.74-255.74 255.74-62.4-62.4 193.33-193.34Z"
-        />
-      </svg>
+      Register
     </button>
 
-    <p class="flex self-end text-right">
-      I don't have an account yet.&nbsp;
-      <a href="/register" class="text-zinc-500 underline">Register</a>.
+    <p class="self-end">
+      I already have an account.&nbsp<a
+        href="/login"
+        class="text-zinc-500 underline"
+        >Login</a
+      >.
     </p>
   </form>
 
