--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -20,7 +20,7 @@
 
         <!-- Most Viewed Articles -->
         <section class="mb-8">
-            <h2 class="text-2xl font-bold mb-4">Bài viết được xem nhiều nhất</h2>
+            <h2 class="text-2xl font-bold mb-4">Bài Viết Được Xem Nhiều Nhất</h2>
             <div class="flex flex-wrap -mx-2">
                 <div class="w-full md:w-1/2 lg:w-1/3 px-2 mb-4">
                     <a href="#" class="block">
@@ -40,7 +40,7 @@
 
         <!-- Latest Articles -->
         <section class="mb-8">
-            <h2 class="text-2xl font-bold mb-4">Bài viết mới nhất</h2>
+            <h2 class="text-2xl font-bold mb-4">Bài Viết Mới Nhất</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
                 <a href="#" class="block">
                     <article
@@ -58,7 +58,7 @@
 
         <!-- Top 10 Categories -->
         <section class="mb-8">
-            <h2 class="text-2xl font-bold mb-4">Top 10 chuyên mục</h2>
+            <h2 class="text-2xl font-bold mb-4">Top 10 Chuyên Mục</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-6">
                 <a href="#" class="block">
                     <article
