--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -89,7 +89,7 @@
         <li class="relative h-14 flex items-center">
           <a class="hover:text-blue-500 flex items-center" href="/">
             <svg xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6 <%= activeCategory === 'home' ? 'text-blue-500' : 'text-black' %> fill-current transform transition-transform duration-300 hover:scale-125"
+              class="h-6 w-6 <%= activeCategory === 'home' ? 'text-blue-500 scale-125' : 'text-black' %> fill-current hover:scale-125"
               viewBox="0 0 24 24" stroke="none">
               <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
               <path d="M9 22V12h6v10" />
