--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -84,42 +84,44 @@
       }
     </style>
     <div class="container mx-auto px-4 py-2 flex justify-center items-center">
-      <ul class="flex space-x-14">
-        <!-- Home Icon -->
-        <li class="relative h-14 flex items-center">
-          <a class="hover:text-blue-500 flex items-center" href="/">
-            <svg xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6 <%= activeCategory === 'home' ? 'text-blue-500 scale-125' : 'text-black' %> fill-current hover:scale-125"
-              viewBox="0 0 24 24" stroke="none">
-              <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
-              <path d="M9 22V12h6v10" />
-              <rect x="10" y="15" width="4" height="7" fill="white" />
-            </svg>
-          </a>
-        </li>
-
-
-        <!-- Dynamic Categories -->
-        <% categories.forEach(category=> { %>
-          <li class="relative dropdown h-14 flex items-center <%= activeCategory === category.name ? 'active' : '' %>">
-            <a class="<%= activeCategory === category.name ? 'text-blue-500' : '' %> hover:text-blue-500 font-bold"
-              href="/<%= category.name %>">
-              <%= category.displayName %>
+      <% function isCurrentPath(path) { // Remove leading and trailing slashes and get the first segment const
+        currentPath=req.path.split('/')[1] || 'home' ; return currentPath===path; } %>
+        <ul class="flex space-x-14">
+          <!-- Home Icon -->
+          <li class="relative h-14 flex items-center">
+            <a class="hover:text-blue-500 flex items-center" href="/">
+              <svg xmlns="http://www.w3.org/2000/svg"
+                class="h-6 w-6 <%= isCurrentPath('home') ? 'text-blue-500 scale-125' : 'text-black' %> fill-current hover:scale-125"
+                viewBox="0 0 24 24" stroke="none">
+                <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
+                <path d="M9 22V12h6v10" />
+                <rect x="10" y="15" width="4" height="7" fill="white" />
+              </svg>
             </a>
-            <% if (category.subcategories && category.subcategories.length> 0) { %>
-              <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-                <% category.subcategories.forEach(sub=> { %>
-                  <li>
-                    <a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="<%= sub.link %>">
-                      <%= sub.displayName %>
-                    </a>
-                  </li>
-                  <% }) %>
-              </ul>
-              <% } %>
           </li>
-          <% }) %>
-      </ul>
+
+
+          <!-- Dynamic Categories -->
+          <% categories.forEach(category=> { %>
+            <li class="relative dropdown h-14 flex items-center <%= isCurrentPath(category.name) ? 'active' : '' %>">
+              <a class="<%= isCurrentPath(category.name) ? 'text-blue-500' : '' %> hover:text-blue-500 font-bold"
+                href="/<%= category.name %>">
+                <%= category.displayName %>
+              </a>
+              <% if (category.subcategories && category.subcategories.length> 0) { %>
+                <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
+                  <% category.subcategories.forEach(sub=> { %>
+                    <li>
+                      <a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="<%= sub.link %>">
+                        <%= sub.displayName %>
+                      </a>
+                    </li>
+                    <% }) %>
+                </ul>
+                <% } %>
+            </li>
+            <% }) %>
+        </ul>
     </div>
   </nav>
 
