--- a/src/views/pages/category-grid.ejs
+++ b/src/views/pages/category-grid.ejs
@@ -1,22 +1,28 @@
 <div class="container mx-auto px-2 py-2">
     <!-- Separator Line -->
     <div class="border border-blue-500 mx-4 mb-3"></div>
+
     <!-- Category title-->
     <h1 class="text-3xl font-bold mx-4 mb-3">
         <%= categoryName %> News
     </h1>
+
     <!-- Separator Line -->
     <div class="border border-blue-500 mx-4 mb-3"></div>
 
     <!-- Subcategories Navigation -->
-    <div class="flex flex-wrap gap-4 mb-4 mx-4">
-        <% categories.find(cat=> cat.name === activeCategory)?.subcategories.forEach(sub => { %>
-            <a href="<%= sub.link %>" class="px-4 py-2 rounded-full font-semibold hover:bg-blue-500 hover:text-white transition-all duration-200 
-            <%= locals.activeSubcategory === sub.name ? 'bg-blue-500 text-white' : 'bg-gray-100' %>">
+    <div class="flex flex-wrap gap-4 mb-3 mx-4">
+        <% const currentUrlParts=locals.req.path.split('/').filter(Boolean); categories.find(cat=> cat.name ===
+            currentUrlParts[0])?.subcategories.forEach(sub => {
+            %>
+            <a href="<%= sub.link %>"
+                class="px-4 py-2 rounded-full font-semibold transition-all duration-200 
+                   <%= currentUrlParts[1] === sub.name ? 'bg-blue-500 text-white' : 'bg-gray-100 hover:bg-blue-500 hover:text-white' %>">
                 <%= sub.displayName %>
             </a>
             <% }) %>
     </div>
+
     <!-- Separator Line -->
     <div class="border border-gray-300 mx-4"></div>
 </div>
